apps/grocy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  labels:
    app.kubernetes.io/name: grocy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: grocy-config
