apps/grocy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  labels:
    app.kubernetes.io/name: grocy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grocy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
