apps/grocy/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  namespace: grocy
  labels:
    app.kubernetes.io/name: grocy
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://grocy.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Household management
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: grocy.png
    gethomepage.dev/name: Grocy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grocy.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: grocy
          port: http
  tls: {}
